--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "nodemon": "^3.1.9"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
