--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "recipe-haven",
+  "version": "1.0.0",
+  "main": "server.js",
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.21.2",
@@ -6,6 +12,7 @@
     "nodemon": "^3.1.9"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   }
 }
