--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,14 @@
     ],
     "routes": [
         {
+            "src": "/sitemap.xml",
+            "dest": "/public/sitemap.xml"
+        },
+        {
+            "src": "/robots.txt",
+            "dest": "/public/robots.txt"
+        },
+        {
             "src": "/Images/(.*)",
             "dest": "/public/Images/$1"
         },
