--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "node": "18.x"
   },
   "dependencies": {
+    "cloudinary": "^1.41.3",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.9"
   },
   "scripts": {
